Prevent wrapping the notes and credits column

--- a/src/views/preview/preview.scss
+++ b/src/views/preview/preview.scss
@@ -169,6 +169,7 @@ $stage-height: 404px;
         margin-top: 1rem;
         justify-content: space-between;
         align-items: flex-start;
+        flex-wrap: nowrap;
     }
 
     .guiPlayer {
